@@ -59,6 +59,14 @@ class CountryTest < Test::Unit::TestCase
     assert_equal 'GB', country.code(:alpha2).value
   end
 
+  def test_find_romania
+    country = ActiveMerchant::Country.find('ROM')
+    assert_equal 'RO', country.code(:alpha2).value
+
+    country = ActiveMerchant::Country.find('ROU')
+    assert_equal 'RO', country.code(:alpha2).value
+  end
+
   def test_raise_on_nil_name
     assert_raises(ActiveMerchant::InvalidCountryCodeError) do
       ActiveMerchant::Country.find(nil)
